doop now based directly on centos 7 and hdp-2.2, added consul for service discovery